--- a/movie.html
+++ b/movie.html
@@ -93,28 +93,22 @@ if(!movie) location.replace("movies.html");
 // ===== ADS: FREE CONTENT ONLY =====
 var AD_INTERVAL = 10 * 60 * 1000; // 10 minutes
 var adTimer = null;
-
 function hasValidPIN(){
   var pin = localStorage.getItem("activePIN");
   var exp = Number(localStorage.getItem("pinExpiry"));
   return pin && exp && Date.now() < exp;
 }
-
 function showAd(){
   if(movie.type !== "free") return;
   if(hasValidPIN()) return;
-
   var adBox = document.getElementById("adBox");
   if(!adBox) return;
-
   adBox.style.display = "block";
   adBox.innerHTML = "";
-
   var s = document.createElement("script");
   s.dataset.zone = "10536867";
   s.src = "https://nap5k.com/tag.min.js";
   s.async = true;
-
   adBox.appendChild(s);
 }
 
@@ -123,11 +117,10 @@ title.textContent = movie.title;
 meta.textContent = movie.country + " • " + movie.year;
 synopsis.textContent = movie.synopsis || "";
 
-// ===== VIDEO NORMALIZATION (FIXED YouTube embed) =====
+// ===== VIDEO NORMALIZATION =====
 function normalizeVideo(url){
   try{
     url = url.trim();
-
     // YouTube
     if(url.includes("youtube.com") || url.includes("youtu.be")){
       let videoId = "";
@@ -143,18 +136,15 @@ function normalizeVideo(url){
       }
       if(videoId) return {type:'youtube', source:videoId};
     }
-
     // Vimeo
     if(url.includes("vimeo.com")){
       return {type:'vimeo', source:url.split("/").pop()};
     }
-
     // Google Drive
     if(url.includes("/d/")){
       var driveId = url.split("/d/")[1].split("/")[0];
-      return {type:'mp4', source:"https://drive.google.com/uc?export=download&id="+driveId};
+      return {type:'mp4', source:"https://drive.google.com/uc?export=media&id="+driveId};
     }
-
     // Default MP4
     return {type:'mp4', source:url};
   }catch(e){ return {type:'mp4', source:url}; }
@@ -164,7 +154,7 @@ function normalizeVideo(url){
 const storageKey = "resume_movie_" + movie.id;
 
 // ===== INITIALIZE PLYR =====
-const player = new Plyr('#player', {
+const player = new Plyr('#player',{
   autoplay:false,
   controls:['play','progress','current-time','mute','volume','fullscreen']
 });
@@ -173,13 +163,13 @@ const player = new Plyr('#player', {
 watchBtn.onclick = function(){
   const v = normalizeVideo(movie.video);
   let source;
-  if(v.type==='youtube') source={type:'video',sources:[{src:v.source,provider:'youtube'}]};
-  else if(v.type==='vimeo') source={type:'video',sources:[{src:v.source,provider:'vimeo'}]};
+  if(v.type==='youtube') source={type:'youtube',sources:[{src:v.source,provider:'youtube'}]};
+  else if(v.type==='vimeo') source={type:'vimeo',sources:[{src:v.source,provider:'vimeo'}]};
   else source={type:'video',sources:[{src:v.source,type:'video/mp4'}]};
-
+  
   player.source = source;
 
-  // ===== AUTO-RESUME =====
+  // AUTO-RESUME
   const saved = JSON.parse(localStorage.getItem(storageKey));
   if(saved && saved.time) player.currentTime = saved.time;
 
@@ -198,33 +188,26 @@ player.on('timeupdate', function(){
   localStorage.setItem(storageKey, JSON.stringify({time:player.currentTime}));
 });
 
-// ===== SHARE LOGIC (UNCHANGED) =====
+// ===== SHARE LOGIC =====
 var SHARE_URL = "https://busanso-nation.github.io/home.html";
-var shareText =
-movie.title + "\n" +
-movie.country + " • " + movie.year + "\n\n" +
-movie.synopsis + "\n\nWatch on BUSANSO:\n" +
-SHARE_URL;
+var shareText = movie.title + "\n" + movie.country + " • " + movie.year + "\n\n" +
+                movie.synopsis + "\n\nWatch on BUSANSO:\n" + SHARE_URL;
 
 shareBtn.onclick = function(){
-  shareOptions.style.display =
-    shareOptions.style.display === "flex" ? "none" : "flex";
+  shareOptions.style.display = shareOptions.style.display === "flex" ? "none" : "flex";
 };
-
 shareWhatsapp.onclick = function(){
   window.open("https://wa.me/?text=" + encodeURIComponent(shareText));
 };
-
 shareImo.onclick = function(){
   window.open("imo://chat?text=" + encodeURIComponent(shareText));
 };
-
 shareTiktok.onclick = function(){
   navigator.clipboard.writeText(shareText);
   alert("Copied! Paste it on TikTok");
 };
 
-// ===== COMMENTS (UNCHANGED) =====
+// ===== COMMENTS =====
 var commentsRef = firebase.database().ref("comments/movies/" + movie.id);
 var savedName = localStorage.getItem("username");
 if(savedName) usernameInput.value = savedName;
@@ -233,7 +216,6 @@ commentBtn.onclick = function(){
   var user = usernameInput.value.trim().slice(0,20);
   var text = commentInput.value.trim().slice(0,300);
   if(!user || !text) return;
-
   localStorage.setItem("username", user);
   commentsRef.push({
     user:user,
@@ -249,13 +231,11 @@ commentsRef.limitToLast(100).on("value", function(snap){
   snap.forEach(function(c){
     arr.push({data:c.val(), ref:c.ref});
   });
-  arr.sort(function(a,b){
-    return b.data.timestamp - a.data.timestamp;
-  });
+  arr.sort((a,b)=>b.data.timestamp - a.data.timestamp);
   arr.forEach(function(c){
     var div = document.createElement("div");
     div.innerHTML = "<strong>" + c.data.user + "</strong>: " + c.data.text;
-    if(localStorage.getItem("activePIN") === "Orion196"){
+    if(localStorage.getItem("activePIN")==="Orion196"){
       var b = document.createElement("button");
       b.textContent = "🗑";
       b.style.position="absolute";
@@ -268,6 +248,5 @@ commentsRef.limitToLast(100).on("value", function(snap){
   });
 });
 </script>
-
 </body>
 </html>
