--- a/movies.html
+++ b/movies.html
@@ -215,9 +215,10 @@ body{
 
 <!-- STICKY FOOTER CATEGORIES -->
 <div class="footer-categories">
-  <button onclick="filterCountry('India')">INDIAN</button>
+  <button onclick="filterCountry('India')">India</button>
   <button onclick="filterCountry('USA')">USA</button>
-  <button onclick="filterCountry('Korea')">KOREAN</button>
+    <button onclick="filterCountry('China')">China</button>
+  <button onclick="filterCountry('Korea')">Korea</button>
 </div>
 
 <script>
