--- a/series.html
+++ b/series.html
@@ -194,10 +194,10 @@ body{
 <!-- STICKY FOOTER GENRES -->
 <div class="footer-genres">
   <button onclick="filterGenre('ALL', this)">All Series</button>
-  <button onclick="filterGenre('Action', this)">Action</button>
-  <button onclick="filterGenre('Adventure', this)">Adventure</button>
-  <button onclick="filterGenre('Drama', this)">Drama</button>
-  <button onclick="filterGenre('Comedy', this)">Comedy</button>
+  <button onclick="filterGenre('ACTION', this)">ACTION</button>
+  <button onclick="filterGenre('ADVENTURE', this)">ADVENTURE</button>
+  <button onclick="filterGenre('DRAMA', this)">DRAMA</button>
+  <button onclick="filterGenre('COMEDY', this)">COMEDY</button>
 </div>
 
 <script>
