--- a/movie.html
+++ b/movie.html
@@ -14,19 +14,6 @@
 <!-- Plyr CSS -->
 <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
 
-<script>
-const firebaseConfig = {
-  apiKey: "AIzaSyBGGV9F3Nv13nRJ8t4QCP5Y0IosmKfYz1s",
-  authDomain: "busanso-pins.firebaseapp.com",
-  databaseURL: "https://busanso-pins-default-rtdb.firebaseio.com",
-  projectId: "busanso-pins",
-  storageBucket: "busanso-pins.firebasestorage.app",
-  messagingSenderId: "137040014808",
-  appId: "1:137040014808:web:b0684e17b6b0328da596ad"
-};
-firebase.initializeApp(firebaseConfig);
-</script>
-
 <style>
 body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif;padding:16px}
 .player{max-width:900px;margin:0 auto;position:relative;aspect-ratio:16/9;background:#000;border-radius:10px;overflow:hidden;}
@@ -84,6 +71,19 @@ body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif;padding:16
 <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
 
 <script>
+const firebaseConfig = {
+  apiKey: "AIzaSyBGGV9F3Nv13nRJ8t4QCP5Y0IosmKfYz1s",
+  authDomain: "busanso-pins.firebaseapp.com",
+  databaseURL: "https://busanso-pins-default-rtdb.firebaseio.com",
+  projectId: "busanso-pins",
+  storageBucket: "busanso-pins.firebasestorage.app",
+  messagingSenderId: "137040014808",
+  appId: "1:137040014808:web:b0684e17b6b0328da596ad"
+};
+firebase.initializeApp(firebaseConfig);
+</script>
+
+<script>
 // ===== LOAD MOVIE =====
 var params = new URLSearchParams(location.search);
 var id = params.get("id");
@@ -91,13 +91,15 @@ var movie = MOVIES.find(m => m.id === id);
 if(!movie) location.replace("movies.html");
 
 // ===== ADS: FREE CONTENT ONLY =====
-var AD_INTERVAL = 10 * 60 * 1000; // 10 minutes
+var AD_INTERVAL = 10*60*1000; // 10 minutes
 var adTimer = null;
+
 function hasValidPIN(){
   var pin = localStorage.getItem("activePIN");
   var exp = Number(localStorage.getItem("pinExpiry"));
   return pin && exp && Date.now() < exp;
 }
+
 function showAd(){
   if(movie.type !== "free") return;
   if(hasValidPIN()) return;
@@ -106,9 +108,9 @@ function showAd(){
   adBox.style.display = "block";
   adBox.innerHTML = "";
   var s = document.createElement("script");
-  s.dataset.zone = "10536867";
-  s.src = "https://nap5k.com/tag.min.js";
-  s.async = true;
+  s.dataset.zone="10536867";
+  s.src="https://nap5k.com/tag.min.js";
+  s.async=true;
   adBox.appendChild(s);
 }
 
@@ -117,104 +119,82 @@ title.textContent = movie.title;
 meta.textContent = movie.country + " • " + movie.year;
 synopsis.textContent = movie.synopsis || "";
 
-// ===== VIDEO NORMALIZATION =====
-function normalizeVideo(url){
-  try{
-    url = url.trim();
-    // YouTube
-    if(url.includes("youtube.com") || url.includes("youtu.be")){
-      let videoId = "";
-      if(url.includes("youtu.be")) videoId = url.split("youtu.be/")[1].split(/[?&]/)[0];
-      else if(url.includes("/embed/")) videoId = url.split("/embed/")[1].split(/[?&]/)[0];
-      else if(url.includes("/shorts/")) videoId = url.split("/shorts/")[1].split(/[?&]/)[0];
-      else videoId = new URL(url).searchParams.get("v");
-      if(videoId) return {type:'youtube', source:videoId};
-    }
-    // Vimeo
-    if(url.includes("vimeo.com")) return {type:'vimeo', source:url.split("/").pop()};
-    // Google Drive
-    if(url.includes("/d/")){
-      var driveId = url.split("/d/")[1].split("/")[0];
-      return {type:'mp4', source:"https://drive.google.com/uc?export=download&id="+driveId};
-    }
-    return {type:'mp4', source:url};
-  }catch(e){ return {type:'mp4', source:url}; }
-}
-
-// ===== STORAGE KEY FOR AUTO-RESUME =====
+// ===== STORAGE KEY =====
 const storageKey = "resume_movie_" + movie.id;
 
 // ===== INITIALIZE PLYR =====
-const player = new Plyr('#player',{
-  autoplay:true,
-  controls:['play','progress','current-time','mute','volume','fullscreen']
-});
+const player = new Plyr('#player',{ autoplay:true, controls:['play','progress','current-time','mute','volume','fullscreen'] });
 
-// ===== AUTO-LOAD VIDEO ON PAGE LOAD =====
-(function autoLoadMovie(){
+// ===== VIDEO NORMALIZATION (YouTube/Vimeo/Drive) =====
+function normalizeVideo(url){
+  url = url.trim();
+  // YouTube
+  if(url.includes("youtube.com") || url.includes("youtu.be")){
+    let videoId = "";
+    if(url.includes("youtu.be")) videoId=url.split("youtu.be/")[1].split(/[?&]/)[0];
+    else if(url.includes("/embed/")) videoId=url.split("/embed/")[1].split(/[?&]/)[0];
+    else if(url.includes("/shorts/")) videoId=url.split("/shorts/")[1].split(/[?&]/)[0];
+    else videoId=new URL(url).searchParams.get("v");
+    if(videoId) return {type:'youtube', source:videoId};
+  }
+  // Vimeo
+  if(url.includes("vimeo.com")) return {type:'vimeo', source:url.split("/").pop()};
+  // Google Drive
+  if(url.includes("drive.google.com")){
+    let match = url.match(/\/d\/([a-zA-Z0-9_-]+)/);
+    if(match) return {type:'mp4', source:`https://drive.google.com/uc?export=media&id=${match[1]}`};
+  }
+  // default
+  return {type:'mp4', source:url};
+}
+
+// ===== LOAD MOVIE FUNCTION =====
+function loadMovie(userAction=false){
   const v = normalizeVideo(movie.video);
   let source;
   if(v.type==='youtube') source={type:'youtube',sources:[{src:v.source,provider:'youtube'}]};
   else if(v.type==='vimeo') source={type:'vimeo',sources:[{src:v.source,provider:'vimeo'}]};
   else source={type:'video',sources:[{src:v.source,type:'video/mp4'}]};
+
   player.source = source;
 
-  // AUTO-RESUME
+  // Auto-resume
   const saved = JSON.parse(localStorage.getItem(storageKey));
   if(saved && saved.time) player.currentTime = saved.time;
 
+  // Auto-fullscreen if valid PIN and user clicked watch
+  if(userAction && hasValidPIN()) player.fullscreen.enter();
+
   player.play();
 
-  // START AD TIMER
   showAd();
   if(adTimer) clearInterval(adTimer);
   adTimer = setInterval(function(){
     if(hasValidPIN()){ clearInterval(adTimer); return; }
     showAd();
   }, AD_INTERVAL);
-})();
+}
 
-// ===== WATCH BUTTON (FULLSCREEN FOR ACTIVE PIN HOLDERS) =====
-watchBtn.onclick = function(){
-  const v = normalizeVideo(movie.video);
-  let source;
-  if(v.type==='youtube') source={type:'youtube',sources:[{src:v.source,provider:'youtube'}]};
-  else if(v.type==='vimeo') source={type:'vimeo',sources:[{src:v.source,provider:'vimeo'}]};
-  else source={type:'video',sources:[{src:v.source,type:'video/mp4'}]};
-  player.source = source;
-
-  // AUTO-RESUME
-  const saved = JSON.parse(localStorage.getItem(storageKey));
-  if(saved && saved.time) player.currentTime = saved.time;
-
-  if(hasValidPIN()) player.fullscreen.enter();
-  player.play();
-
-  // START AD TIMER
-  showAd();
-  if(adTimer) clearInterval(adTimer);
-  adTimer = setInterval(function(){
-    if(hasValidPIN()){ clearInterval(adTimer); return; }
-    showAd();
-  }, AD_INTERVAL);
-};
+// ===== AUTO-LOAD MOVIE ON PAGE LOAD =====
+window.addEventListener('load',()=>{ loadMovie(); });
 
 // ===== SAVE TIME PERIODICALLY =====
-player.on('timeupdate', function(){
+player.on('timeupdate',()=>{ 
   localStorage.setItem(storageKey, JSON.stringify({time:player.currentTime}));
 });
+
+// ===== WATCH BUTTON =====
+watchBtn.onclick = ()=>{ loadMovie(true); };
 
 // ===== SHARE LOGIC =====
 var SHARE_URL = "https://busanso-nation.github.io/home.html";
 var shareText = movie.title + "\n" + movie.country + " • " + movie.year + "\n\n" +
                 movie.synopsis + "\n\nWatch on BUSANSO:\n" + SHARE_URL;
 
-shareBtn.onclick = function(){
-  shareOptions.style.display = shareOptions.style.display === "flex" ? "none" : "flex";
-};
-shareWhatsapp.onclick = function(){ window.open("https://wa.me/?text=" + encodeURIComponent(shareText)); };
-shareImo.onclick = function(){ window.open("imo://chat?text=" + encodeURIComponent(shareText)); };
-shareTiktok.onclick = function(){ navigator.clipboard.writeText(shareText); alert("Copied! Paste it on TikTok"); };
+shareBtn.onclick = ()=>{ shareOptions.style.display = shareOptions.style.display==='flex'?'none':'flex'; };
+shareWhatsapp.onclick = ()=>{ window.open("https://wa.me/?text="+encodeURIComponent(shareText)); };
+shareImo.onclick = ()=>{ window.open("imo://chat?text="+encodeURIComponent(shareText)); };
+shareTiktok.onclick = ()=>{ navigator.clipboard.writeText(shareText); alert("Copied! Paste it on TikTok"); };
 
 // ===== COMMENTS =====
 var commentsRef = firebase.database().ref("comments/movies/" + movie.id);
@@ -222,28 +202,25 @@ var savedName = localStorage.getItem("username");
 if(savedName) usernameInput.value = savedName;
 
 commentBtn.onclick = function(){
-  var user = usernameInput.value.trim().slice(0,20);
-  var text = commentInput.value.trim().slice(0,300);
-  if(!user || !text) return;
-  localStorage.setItem("username", user);
-  commentsRef.push({user:user, text:text, timestamp: firebase.database.ServerValue.TIMESTAMP});
-  commentInput.value = "";
+  var user=usernameInput.value.trim().slice(0,20);
+  var text=commentInput.value.trim().slice(0,300);
+  if(!user||!text) return;
+  localStorage.setItem("username",user);
+  commentsRef.push({user:user,text:text,timestamp:firebase.database.ServerValue.TIMESTAMP});
+  commentInput.value="";
 };
 
 commentsRef.limitToLast(100).on("value", function(snap){
   commentsList.innerHTML = "";
   var arr = [];
-  snap.forEach(function(c){ arr.push({data:c.val(), ref:c.ref}); });
-  arr.sort((a,b)=>b.data.timestamp - a.data.timestamp);
-  arr.forEach(function(c){
+  snap.forEach(c=>arr.push({data:c.val(), ref:c.ref}));
+  arr.sort((a,b)=>b.data.timestamp-b.data.timestamp);
+  arr.forEach(c=>{
     var div = document.createElement("div");
-    div.innerHTML = "<strong>" + c.data.user + "</strong>: " + c.data.text;
+    div.innerHTML="<strong>"+c.data.user+"</strong>: "+c.data.text;
     if(localStorage.getItem("activePIN")==="Orion196"){
-      var b = document.createElement("button");
-      b.textContent = "🗑";
-      b.style.position="absolute";
-      b.style.right="6px";
-      b.style.top="6px";
+      var b=document.createElement("button");
+      b.textContent="🗑"; b.style.position="absolute"; b.style.right="6px"; b.style.top="6px";
       b.onclick=function(){ c.ref.remove(); };
       div.appendChild(b);
     }
@@ -251,5 +228,6 @@ commentsRef.limitToLast(100).on("value", function(snap){
   });
 });
 </script>
+
 </body>
 </html>
